# AWETA

./: README.md  REFACTORING_NOTES.md  aweta-app.spec  main.py  main_new.py  old_main.py  pyproject.toml  test.py
TIA_Db/: __init__.py  datablock.py  parser.py  s7mini.py  type_definitions.py  utlis.py
TIA_Db/tests/: DB_General.db  DB_IO.db  test_array.py  test_s7datablock_basic.py
aweta/: __init__.py  datablock.py
aweta/core/: __init__.py  constants.py  variables.py
aweta/plc/: __init__.py  connection.py  db_viewer.py
aweta/project/: __init__.py  manager.py
aweta/tools/: __init__.py  base.py
aweta/tools/belt/: __init__.py  belt_item.py  box_generator.py  exit_item.py  link.py  port.py
aweta/ui/: __init__.py  main_window.py  view.py
aweta/ui/dialogs/: __init__.py  belt_settings_dialog.py  exit_settings_dialog.py  plc_settings_dialog.py  toolbox_dialog.py
aweta_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: build_macos.sh  build_windows.ps1  connect.py
